--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,8 +29,11 @@
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
 
+  --header-height: 137px;
+
   --white: #ffffff;
   --barely-blue: #e5e5e5;
+  --semilight-blue: #eff3f8;
   --blue: #5daaff;
   --dark-blue: #2876cc;
   --barely-grey: #f8faff;
