--- a/styles/reset.css
+++ b/styles/reset.css
@@ -26,7 +26,7 @@ a:active {
 a,
 a:link,
 a:visited {
-  color: inherit;
+  /* color: inherit; */
   text-decoration: none;
   /* display: inline-block; */
 }
