feat: add react-select

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,6 +37,7 @@
   --blue: #5daaff;
   --dark-blue: #2876cc;
   --barely-grey: #f8faff;
+  --ebeb-grey: #EBEBEB;
   --light-grey: #b7b7b7;
   --grey: #606f7a;
 }
