--- a/styles/reset.css
+++ b/styles/reset.css
@@ -94,7 +94,7 @@ input::-ms-clear {
 }
 
 button,
-input[type="submit"] {
+input[type='submit'] {
   display: inline-block;
   box-shadow: none;
   background-color: transparent;
