--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,32 +1,29 @@
 @font-face {
-  font-family: "Open Sans", sans-serif;
-  src: url("../public/fonts/OpenSans-Regular.woff"),
-    url("../public/fonts/OpenSans-Regular.woff2");
+  font-family: 'Open Sans', sans-serif;
+  src: url('../public/fonts/OpenSans-Regular.woff'), url('../public/fonts/OpenSans-Regular.woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Open Sans", sans-serif;
-  src: url("../public/fonts/OpenSans-SemiBold.woff"),
-    url("../public/fonts/OpenSans-SemiBold.woff2");
+  font-family: 'Open Sans', sans-serif;
+  src: url('../public/fonts/OpenSans-SemiBold.woff'), url('../public/fonts/OpenSans-SemiBold.woff2');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Roboto", sans-serif;
-  src: url("../public/fonts/Roboto-Medium.woff"),
-    url("../public/fonts/Roboto-Medium.woff2");
+  font-family: 'Roboto', sans-serif;
+  src: url('../public/fonts/Roboto-Medium.woff'), url('../public/fonts/Roboto-Medium.woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 
 :root {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   --header-height: 137px;
   --white: #ffffff;
@@ -35,7 +32,7 @@
   --blue: #5daaff;
   --dark-blue: #2876cc;
   --barely-grey: #f8faff;
-  --ebeb-grey: #EBEBEB;
+  --ebeb-grey: #ebebeb;
   --light-grey: #b7b7b7;
   --grey: #606f7a;
 }
