--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,6 @@
 @font-face {
   font-family: 'Open Sans';
-  src: url('../public/fonts/OpenSans-Regular.woff2'),
-       url('../public/fonts/OpenSans-Regular.woff');
+  src: url('../public/fonts/OpenSans-Regular.woff2'), url('../public/fonts/OpenSans-Regular.woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -9,8 +8,7 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../public/fonts/OpenSans-SemiBold.woff2'),
-       url('../public/fonts/OpenSans-SemiBold.woff');
+  src: url('../public/fonts/OpenSans-SemiBold.woff2'), url('../public/fonts/OpenSans-SemiBold.woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -18,8 +16,7 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: url('../public/fonts/Roboto-Medium.woff2'),
-       url('../public/fonts/Roboto-Medium.woff');
+  src: url('../public/fonts/Roboto-Medium.woff2'), url('../public/fonts/Roboto-Medium.woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
